add letter to my old code

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,5 +1,17 @@
 <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
+        <div class="card h-100">
+            <div class="card-header">
+                <a href="blog/a-love-letter-to-my-old-code">A Love Letter to My Old Code</a>
+            </div>
+            <div class="card-body">
+                <p class="card-text">
+                    This blog post isn’t a technical deep dive. It’s a letter to my past self — and to anyone who’s ever built something in silence, loved it deeply, and walked away.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
         <div class="card h-100 mb-0">
             <div class="card-header">
                 <a href="calculus-made-easy">简易微积分</a>
