--- a/content/_index.html
+++ b/content/_index.html
@@ -12,6 +12,18 @@
         </div>
     </div>
     <div class="col">
+        <div class="card h-100">
+            <div class="card-header">
+                <a href="nlp">自然语言处理笔记</a>
+            </div>
+            <div class="card-body">
+                <p class="card-text">
+                    My notebook on learning Natural Language Processing
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
         <div class="card h-100 mb-0">
             <div class="card-header">
                 <a href="calculus-made-easy">简易微积分</a>
