``` docs(content): 更新自然语言处理笔记标题
将首页卡片中的"自然语言处理笔记"更新为"自然语言处理入门"，使标题更加准确地反映内容的入门性质。
```

--- a/content/_index.html
+++ b/content/_index.html
@@ -15,7 +15,7 @@
     <div class="col">
         <div class="card h-100">
             <div class="card-header">
-                <a href="nlp-with-pytorch">自然语言处理笔记</a>
+                <a href="nlp-with-pytorch">自然语言处理入门</a>
             </div>
             <div class="card-body">
                 <p class="card-text">
