--- a/content/_index.html
+++ b/content/_index.html
@@ -2,11 +2,11 @@
     <div class="col">
         <div class="card h-100">
             <div class="card-header">
-                <a href="blog/a-love-letter-to-my-old-code">A Love Letter to My Old Code</a>
+                <a href="decode-the-world">解码世界</a>
             </div>
             <div class="card-body">
                 <p class="card-text">
-                    This blog post isn’t a technical deep dive. It’s a letter to my past self — and to anyone who’s ever built something in silence, loved it deeply, and walked away.
+                    用我的方式来理解这个叫做“世界”的操作系统
                 </p>
             </div>
         </div>
